sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:5: error: not found: value i
  while(ecart > 1|| i >0 )  {
                    ^AlgCombSort:7: error: not found: value i
    i = 0
    ^AlgCombSort:8: error: not found: value i
    while(i+ecart < getNombreValeurs()){
          ^AlgCombSort:9: error: not found: value i
      if (!plusPetit(i,i+ecart)){
                     ^AlgCombSort:9: error: not found: value i
      if (!plusPetit(i,i+ecart)){
                       ^AlgCombSort:10: error: not found: value i
        echange (i,i+ecart)
                 ^AlgCombSort:10: error: not found: value i
        echange (i,i+ecart)
                   ^AlgCombSort:11: error: not found: value i
        i +=1
        ^